NPG: init_dependencies in class loader data graph can cause invalid CLD

XMLWordPrintable

    • b31


        In the ClassLoaderDataGraph::add() function, if init_dependencies gets an OutOfMemoryError, it will leave an invalid ClassLoaderData object on the graph and installed in the class loader oop. If a dependency is added to this object, it will crash.

        Thanks to David Holmes for discovering this through code inspection.

              Assignee:
              Mikael Gerdin (Inactive)
              Reporter:
              Coleen Phillimore
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: