8011802: NPG: init_dependencies in class loader data graph can cause invalid CLD

Restructure initialization of ClassLoaderData to not add a new instance if init_dependencies fail

Reviewed-by: stefank, coleenp